--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
        
        margin-left: -5px;
        margin-right: -5px;
-       background-color: #2d3c54;
+       background-color: white;
     }
     .top {
         display: flex;
