--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     .calc {
        display: flex;
        flex-direction: column;
-       flex-shrink: 0;
+       height: 100vh;
        margin-top: -5px;
        
        margin-left: -5px;
@@ -63,6 +63,7 @@
         border-radius: 2px;
         background-color:#2d3c54;
         height: 40px;
+        flex-grow: 1;
         color: white;
         justify-content: right;
         align-items: center;
