--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
         justify-content: right;
         align-items: flex-end;
         padding-right: 5px;
+        padding-top: 5px;
     }
     .mode {
         display: flex;
