--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
     body {
         background-color: black;
         padding: 0px;
@@ -68,6 +68,7 @@
         justify-content: right;
         align-items: flex-end;
         padding-right: 5px;
+        padding-bottom: 10px;
     }
     .mode {
         display: flex;
@@ -167,7 +168,7 @@
     }
 }
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 501px) {
     body {
         background-color: black;
         padding: 0px;
