--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@
         justify-content: right;
         align-items: flex-end;
         padding-right: 5px;
-        padding-bottom: 50px;
     }
     .mode {
         display: flex;
@@ -167,8 +166,19 @@
         background-color: #3399ff;
     }
 }
-
-@media screen and (min-width: 401px) {
+@media (min-width: 401px) and (max-width: 700px) {
+     .calc {
+       display: flex;
+       flex-direction: column;
+       height: 100vh;
+       margin-top: -5px;
+       margin-bottom: -5px;
+       margin-left: 100px;
+       margin-right: 100px;
+       background-color: #2d3c54;
+    }
+}
+@media screen and (min-width: 701px) {
     body {
         background-color: black;
         padding: 0px;
